[gd_scene load_steps=5 format=3 uid="uid://cuwbubanwowgv"]

[ext_resource type="PackedScene" uid="uid://rekipk5xspb1" path="res://Demo/Scenes/World.tscn" id="1"]
[ext_resource type="Theme" uid="uid://dhkt4uo1jjcia" path="res://Demo/Resources/UITheme.tres" id="2"]
[ext_resource type="Script" path="res://Demo/Scripts/TestWorld.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://oafvawlaifee" path="res://Demo/Scenes/UIInfoBox.tscn" id="4"]

[node name="TestWorld" instance=ExtResource("1")]
script = ExtResource("3")

[node name="TextureRect" parent="." index="0"]
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

[node name="Control" type="Control" parent="CanvasLayer" index="0"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control" index="0"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control2" type="Control" parent="CanvasLayer/Control/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
mouse_filter = 2

[node name="InfoBox" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2" index="0" instance=ExtResource("4")]
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ControlsPanel" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer" index="1"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ControlsPanel" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ControlsPanel/VBoxContainer" index="0"]
layout_mode = 2
text = "W - Throttle Up     S - Throttle Down     X - Cut Throttle     Space - Brake"

[node name="CameraInfoControls" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ControlsPanel/VBoxContainer" index="1"]
visible = false
layout_mode = 2
text = "Middle Mouse - Pan Camera3D     Scroll Wheel - Zoom"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2" index="3"]
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" index="0"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" index="1"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer" index="0"]
layout_mode = 2

[node name="ControlsButton" type="CheckButton" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Controls"

[node name="InfoButton" type="CheckButton" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer/VBoxContainer" index="1"]
layout_mode = 2
text = "Train Info"

[node name="Button" type="Button" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer/VBoxContainer" index="2"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer/VBoxContainer/ControlsButton" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer/VBoxContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
